SERVER-32593 Stepdown after failed moveChunk commit shouldn't crash source shard primary